After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690035 - gst-rtsp-server: do not destroy bus watch before EOS is received
gst-rtsp-server: do not destroy bus watch before EOS is received
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
0.10.x
Other Linux
: Normal normal
: 0.10.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-11 10:00 UTC by Aleix Conchillo Flaqué
Modified: 2012-12-11 10:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp-media: do not destroy bus watch before EOS is received (2.07 KB, patch)
2012-12-11 10:01 UTC, Aleix Conchillo Flaqué
none Details | Review

Description Aleix Conchillo Flaqué 2012-12-11 10:00:04 UTC
A new bug was introduced while fixing bug 689597. If we send EOS event, we don't need to destroy the bus watch until the EOS event is received, otherwise pipeline never ends and is not freed.
Comment 1 Aleix Conchillo Flaqué 2012-12-11 10:01:49 UTC
Created attachment 231247 [details] [review]
rtsp-media: do not destroy bus watch before EOS is received
Comment 2 Wim Taymans 2012-12-11 10:20:15 UTC
commit 5daf78dc690b5b5f033b7c4b5b56286d3fe3e7b7
Author: Aleix Conchillo Flaque <aleix@oblong.com>
Date:   Tue Dec 11 11:00:21 2012 +0100

    rtsp-media: do not destroy bus watch before EOS is received
    
    * gst/rtsp-server/rtsp-media.c: a new bug was introduced while fixing
      #689597. If we send EOS event, we don't need to destroy the bus watch
      until the EOS event is received, otherwise pipeline never ends and is
      not freed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690035