rtsp-media: do not destroy bus watch before EOS is received

* gst/rtsp-server/rtsp-media.c: a new bug was introduced while fixing
  #689597. If we send EOS event, we don't need to destroy the bus watch
  until the EOS event is received, otherwise pipeline never ends and is
  not freed.

https://bugzilla.gnome.org/show_bug.cgi?id=690035